Implement reset to defaults button, change underlying edit logic